crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_var_positional_with_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_var_positional_with_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..30,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..23,
                    is_async: false,
                    decorator_list: [],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 4..7,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 7..17,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 9,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 11..16,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 12..16,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 17..23,
                                value: Tuple(
                                    ExprTuple {
                                        node_index: NodeIndex(None),
                                        range: 17..23,
                                        elts: [
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 18..19,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 21..22,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: true,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 26..29,
                    value: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            node_index: NodeIndex(None),
                            range: 26..29,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, *args=(1, 2)): ...
  |                 ^ Syntax Error: Parameter with `*` or `**` cannot have default value
  |


  |
1 | def foo(a, *args=(1, 2)): ...
  |                  ^ Syntax Error: Expected `)`, found `(`
  |


  |
1 | def foo(a, *args=(1, 2)): ...
  |                        ^ Syntax Error: Expected newline, found `)`
  |


  |
1 | def foo(a, *args=(1, 2)): ...
  |                         ^ Syntax Error: Expected a statement
  |
